website/styles.css
@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Architects+Daughter&family=Dosis:wght@200;300&family=Josefin+Sans:wght@100;200&family=Jura&family=Montserrat&family=Roboto&family=Sniglet&family=Varela+Round&display=swap');

body {
    margin: 0;
    padding: 0;
    background: rgb(50, 88, 85);
    font-family: 'Varela Round';
    font-weight: 200;
    font-size: .6em;
}

h1 {
    font-family: 'Amatic SC';
    margin:auto;
    text-align: center;
    font-size: 6em;
    padding: .5em;
    color: rgb(170, 92, 56);
    text-shadow: 2px 2px 5px rgb(88, 60, 47);
}


 a {
    color: #427d80;
    text-decoration: none;
}

.size-select{
    background-color: rgb(47, 75, 70);
    color:  rgb(147, 177, 172);
    width: 500px;
    height: 250px;
    margin: 3em;
    padding: 1em;
    font-size: 3em;
    text-align: center;
    box-shadow: -4px 5px 28px 0px rgba(0,0,0,0.35);
}

label {
    font-size: .7em;
    font-family: 'Montserrat';
    margin: .4em;
}

input {
    font-size: .6em;
    color: rgb(90, 76, 51);
    background: rgb(184, 157, 107);
    border: none;
    outline: none;
}
input[type='radio'] { 
    opacity: 0;
    position: fixed;
    width: 0;
}

#label {
    font-family: 'Montserrat';
    background-color: rgb(47, 75, 70);
    border: none;

}
.size-select label {
    display: inline-block;
    background-color: rgb(90, 133, 127);
    color: rgb(143, 209, 200);
    padding: .3em .4em;
    font-family: 'Montserrat';
    font-size: .6em;
    border-radius: 4px;
}
.size-select input[type="radio"]:checked + label {
    background-color:rgb(171, 211, 195);
    border-color: rgb(108, 148, 132);
    color: rgb(65, 88, 79);
}
#btn {
    margin: 1.4em;
    padding: .2em;
    border-radius: 5px;
    width: 75px;
    box-shadow: -4px 5px 28px 0px rgba(0,0,0,0.35);
}

#btn:active {
    background: rgb(20, 20, 20);
    color: white;
}

.wrapper {
    display: flex;
    flex-direction: row;
    justify-content: center!important;
    background: rgb(145, 158, 154);
    width: 70%;
    margin:auto;
    position: relative;
    background: linear-gradient(#427d80, #948566);
}

.score-board {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: rgb(170, 149, 118);
    margin: 2em;
    width: 20%;
    font-family: 'Josefin Sans';
    padding: 1em;
    box-shadow: -4px 5px 28px 0px rgba(0,0,0,0.35);
}

#moves-display {
    font-size: .8em;
    margin: .5em;
    padding: .3em;
}

#time-display {
    font-size: .8em;
    margin: .5em;
    padding: .3em;
}

.sub-header {
    font-size: 2em;
    font-weight: bold;
    margin: .4em;
    color: rgb(30, 77, 72)
}

.feedback-icon {
    margin: auto;
    padding: 4em;
    text-align: center;
    z-index: 1;
}


.card-grid-small {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(4, 1fr);
    min-width: 40%;
    max-width: 50%;
    height: 40%;
    margin: 2em;
    padding: 1.7em;
    box-shadow: -4px 5px 28px 0px rgba(0,0,0,0.55);
    background: rgb(125, 146, 144);
    user-select: none;
    position: relative;
}

.card-grid-small img {
    height: 250px;
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 70px;
    top: 70px;
}
.card-grid-large {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(6, 1fr);
    min-width: 50%;
    max-width: 70%;
    margin: 2em;
    padding: 1.7em;
    box-shadow: -4px 5px 28px 0px rgba(0,0,0,0.55);
    background: rgb(125, 146, 144);
    user-select: none;
}

.card-grid-large img {
    height: 300px;
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 80px;
    top: 80px;
}

.card-grid-small div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 125px;
    width: 125px;
    margin: .25em;
    text-align: center;
    font-size: 6em;
    padding: 0;
    background:rgb(59, 51, 57);
    color: rgb(59, 51, 57);
    border-radius: 15px;
    transition: all .2s ease-in;
    transition: all .7s ease-out;
    box-shadow: -4px 5px 28px 0px rgba(0,0,0,0.55);
}

.card-grid-large div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100px;
    width: 100px;
    margin: .3em;
    text-align: center;
    font-size: 4em;
    background:rgb(59, 51, 57);
    color: rgb(59, 51, 57);
    border-radius: 15px;
    transition: all .2s ease-in;
    transition: all .7s ease-out;
    box-shadow: -4px 5px 28px 0px rgba(0,0,0,0.55);
}

.visible {
    background: white!important;
    color: black
}

.disabled {
    pointer-events: none;
}

.match {
    color: grey!important;
    background: rgb(110, 107, 107)!important;
}

.match::after {
    content: '✔';
    font-size: .7em;
    color: green;
}

.unmatch {
    color: rgb(206, 140, 140)!important;
}

.fade {
    opacity: .1;
}

.hidden {
    display: none
}

.highlighted {
    border: dashed rgb(78, 78, 78) 1px;
    transform: scale(6);
}


#refresh {
    margin: 1em;
    position: absolute;
    top: 0;
    left: 0;
    filter: invert(29%) sepia(47%) saturate(459%) hue-rotate(131deg) brightness(101%) contrast(82%);
}
#refresh:hover {
    filter: invert(45%) sepia(33%) saturate(904%) hue-rotate(329deg) brightness(98%) contrast(95%);
    cursor: pointer;
}

 /* INFO BUTTON */


#info {
    position:absolute;
    bottom: 0;
    left: 0;
    background-color: #b99b62;
    width: 2.5%;
    height: 4.6em;
    display: flex;
    flex-direction: row;
    justify-content: space-evely;
    align-items: center;
    transition: all .7s ease-in-out;
    overflow: hidden;
    opacity: .8
}
#info img {
    filter: invert(29%) sepia(47%) saturate(459%) hue-rotate(131deg) brightness(101%) contrast(82%);
    margin: 5px;
    font-size: 1.3em;
}
#icon-info {
    margin: 5px;
    font-size: 1.3em;
    color:rgb(78, 102, 92);
}
.expand {
    width: 15%!important;
}

